# Epitalnew

./: README.md
docs/: Doxyfile.in
src/: .gitignore  Alloy.cpp  Alloy.hpp  BrentsRootFinder.hpp  CMakeLists.txt  CMaterial.cpp  CMaterial.hpp  CarrierStatistics.cpp  CarrierStatistics.hpp  Constants.hpp  CustomTypes.hpp  DFunction.cpp  DFunction.hpp  DFunction2D.cpp  DFunction2D.hpp  DFunction3D.cpp  DFunction3D.hpp  Epital.cpp  Graphics.cpp  Graphics.hpp  Grid.cpp  Grid.hpp  Heterostructure.cpp  Heterostructure.hpp  Heterostructure3D.cpp  Heterostructure3D.hpp  Lab26.cpp  Makefile  Materials.cpp  Materials.hpp  PWFunction.cpp  PWFunction.hpp  PerturbationMethod.hpp  PhononScattering.cpp  PhononTest.cpp  PhotonScattering.cpp  PhotonScattering.hpp  QCD.cpp  QCD.hpp  Solution.hpp  (+23 more)
src/CUDA/: CUDAfunctions.cu  CUDAfunctions.hpp
src/Examples/: Examples.txt  PhononTest.cpp  lab3D.cpp  labHybrid2.cpp  labPLQCD.cpp  splitoperator_example.cpp  transfermatrix.cpp  transfermatrix_PTMCexample.cpp  transfermatrix_example.cpp
src/Fixme/: CarrierStatistics.cpp  PerturbationMethod.cpp  PhononScattering.hpp  SolverSO3D.hpp  strainCalculator.cpp
test/: splitoperator_test.hpp  tests.cpp  transfermatrix_test.hpp
